Ensure button in front of Ace scrollbars
Thanks to Duncan-W for report.

--- a/src/pytch-jr-ide.scss
+++ b/src/pytch-jr-ide.scss
@@ -481,7 +481,7 @@
   right: 0px;
   bottom: 0px;
   margin-bottom: 0px;
-  z-index: 1;
+  z-index: 10;
 
   pointer-events: none;
 
